--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       content="Sistema documental Instituto Superior"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/rikmms/progress-bar-4-axios/0a3acf92/dist/nprogress.css" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Gestion IS93</title>
